--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -1,7 +1,6 @@
-/* components/Contacts/Contacts.module.css */
 .contacts {
     text-align: center;
-    background-color: #fef8db; /* Добавляем фоновый цвет */
+    background-color: #fef8db;
     padding: 20px; /* Добавляем внутренние отступы для улучшения внешнего вида */
     border-radius: 10px; /* Скругляем углы */
   }
@@ -10,7 +9,6 @@
     display: flex;
     justify-content: center; /* Центрируем элементы по горизонтали */
     gap: 20px; /* Добавляем промежуток между элементами */
-    
     background-color: #fef8db;
   }
 
