--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,12 +1,11 @@
 .projects {
-    margin: 20px auto; /* Центрируем контейнер по горизонтали */
+    margin: 20px auto; 
     display: flex;
-    flex-direction: column; /* Располагаем элементы по вертикали */
-    align-items: center; /* Центрируем элементы по горизонтали */
-    gap: 20px; /* Зазор между проектами */
-    width: 80%; /* Ограничиваем ширину контейнера */
-    max-width: 900px; /* Максимальная ширина для контейнера */
-    background-color: #fffdf3;
+    flex-direction: column;
+    align-items: center; 
+    gap: 20px; 
+    width: 80%;
+    max-width: 900px; 
   }
   
  .projects h2 {
@@ -15,41 +14,36 @@
     margin-bottom: 20px;
     text-align: center;
     width: 100%;
-    background-color: #fffdf3;
   }
   
   .project {
     background-color: #fef8db;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Тень для визуального отделения */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    width: 100%; /* Ячейки занимают всю ширину контейнера */
-    max-width: 600px; /* Максимальная ширина ячеек */
+    width: 100%; 
   }
   
   .project h3 {
     font-size: 1.3rem;
     font-weight: bold;
     margin-bottom: 10px;
-    background-color: #fef8db;
   }
   
   .project p {
     font-size: 1rem;
     margin-bottom: 15px;
-    background-color: #fef8db;
   }
   
   .project a {
-    color: #007BFF;
+    color: black;
     font-size: 1rem;
     text-decoration: none;
     margin-bottom: 10px;
-    background-color: #fef8db;
   }
   
   .project a:hover {
