--- a/src/components/WorkExperience/WorkExperience.module.css
+++ b/src/components/WorkExperience/WorkExperience.module.css
@@ -1,11 +1,9 @@
-/* Родительский контейнер, который центрирует блок на экране */
 .wrapper {
     display: flex;
-    justify-content: center; /* Центрируем по горизонтали */
-    align-items: flex-start; /* Центрируем по вертикали */
-    min-height: 100vh; /* Минимальная высота 100% экрана */
-    padding: 20px; /* Немного отступов */
-    background-color: #fffdf3;
+    justify-content: center; 
+    align-items: flex-start; 
+    min-height: 100vh; 
+    padding: 20px; 
   }
   
   .container {
@@ -13,8 +11,8 @@
     grid-template-columns: 1fr 2fr; 
     gap: 20px;
     margin-top: 20px;
-    width: 100%; /* Блок будет адаптироваться по ширине */
-    max-width: 1200px; /* Ограничиваем максимальную ширину */
+    width: 100%; 
+    max-width: 1200px; 
   }
   
   .photoWrapper {
@@ -43,7 +41,6 @@
     font-weight: bold;
     margin-bottom: 10px;
     text-align: left;
-    background-color: #fffdf3;
   }
   
   ul {
